Add enter_values xml and class Add results_screen xml and class

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Enter_Values"></activity>
+        <activity android:name=".Results_Screen"></activity>
     </application>
 
 </manifest>
